exports[`client > reducers > group commuters children handler reducer tests it should handle add commuter 1`] = `
Object {
  "group-2": Object {
    "allAddressesGeocoded": true,
    "commuters": Array [
      "commuter-2",
      "commuter-new",
    ],
    "id": "group-2",
    "name": "Mock Group",
    "organizationId": "organization-2",
  },
}
`;

exports[`client > reducers > group commuters children handler reducer tests it should handle delete commuter 1`] = `
Object {
  "group-2": Object {
    "allAddressesGeocoded": true,
    "commuters": Array [],
    "id": "group-2",
    "name": "Mock Group",
    "organizationId": "organization-2",
  },
}
`;

exports[`client > reducers > group generic reducer tests should handle delete group 1`] = `Object {}`;

exports[`client > reducers > group generic reducer tests should handle set group 1`] = `
Object {
  "group-3": Object {
    "commuters": Array [],
    "id": "group-3",
    "name": "Another Group",
  },
}
`;

exports[`client > reducers > group generic reducer tests should handle set groups 1`] = `
Object {
  "group-3": Object {
    "commuters": Array [],
    "id": "group-3",
    "name": "Another Group",
  },
}
`;

exports[`client > reducers > group should handle add group 1`] = `
Object {
  "new-group": Object {
    "commuters": Array [
      "new-commuter",
    ],
    "id": "new-group",
    "name": "Fake Group",
    "organizationId": "organization-1",
  },
}
`;

exports[`client > reducers > group should handle append commuters 1`] = `
Object {
  "group-2": Object {
    "allAddressesGeocoded": true,
    "commuters": Array [
      "commuter-2",
      "commuter-3",
    ],
    "id": "group-2",
    "name": "Mock Group",
    "organizationId": "organization-2",
  },
}
`;
